<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_scanner"
        style="@style/button_scanner"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/btn_scan"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/btn_messagerie"
        style="@style/button_scanner"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_message"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/btn_gps"
        style="@style/button_scanner"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_gps"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/btn_scanner_gps"
        style="@style/button_scanner"
        android:layout_width="248dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_scan_gps"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/btn_scanner_benne"
        style="@style/button_scanner"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_scan_benne"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="396dp" />


</LinearLayout>